<package>
  <name>ros_h264_streamer</name>
  <author email="pierre.gergondet+github@gmail.com">Pierre Gergondet</author>
  <maintainer email="pierre.gergondet+github@gmail.com">Pierre Gergondet</maintainer>
  <version>0.1.0</version>
  <description>
    A simple ROS node to stream/receive h.264 encoded images through a UDP/TCP socket
  </description>
  <license>BSD</license>
  <url>http://github.com/gergondet/ros_h264_streamer</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>cv_bridge</run_depend>
</package>
